Building financial system operations