@@ -3,14 +3,20 @@ package com.mysite.banking.service.impl;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.mysite.banking.model.Account;
+import com.mysite.banking.model.Amount;
 import com.mysite.banking.model.FileType;
 import com.mysite.banking.service.AccountService;
 import com.mysite.banking.service.exception.*;
+import com.mysite.banking.util.AmountUtil;
 import com.mysite.banking.util.MapperWrapper;
 
 import java.io.*;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.stream.Collectors;
 
 public class AccountServiceImpl implements AccountService {
@@ -18,18 +24,25 @@ public class AccountServiceImpl implements AccountService {
     public static AccountServiceImpl getInstance(){
         return INSTANCE;
     }
+
     static {
-        INSTANCE =new AccountServiceImpl();
+        INSTANCE = new AccountServiceImpl();
     }
-    private ArrayList<Account> accounts;
+
     private final ObjectMapper objectMapper;
+    private ArrayList<Account> accounts;
+    private Map<Integer, Lock> locks;
+    private AmountUtil amountUtil;
     private AccountServiceImpl(){
-        objectMapper= MapperWrapper.getInstance();
-        accounts=new ArrayList<>();
+        amountUtil=AmountUtil.getInstance();
+        locks=new HashMap<>();
+        objectMapper = MapperWrapper.getInstance();
+        accounts = new ArrayList<>();
     }
-
-
-
+private Lock getlock(int accountId){
+        locks.putIfAbsent(accountId,new ReentrantLock());
+        return locks.get(accountId);
+}
     @Override
     public void deleteAccountById(Integer id) throws AccountNotFindException {
         getAccountById(id).setDeleted(true);
@@ -37,23 +50,24 @@ public class AccountServiceImpl implements AccountService {
 
     @Override
     public List<Account> getActiveAccounts() throws EmptyAccountException {
-        List<Account> list = accounts.stream()
-                .filter(accounts -> !accounts.getDeleted()).collect(Collectors.toList());
-
-        if (list.isEmpty()){
+        List<Account> collect = accounts.stream()
+                .filter(account -> !account.getDeleted())
+                .collect(Collectors.toList());
+        if(collect.isEmpty()){
             throw new EmptyAccountException();
         }
-        return list;
+        return collect;
     }
 
     @Override
     public List<Account> getDeletedAccounts() throws EmptyAccountException {
-        List<Account> list = accounts.stream()
-                .filter(Account::getDeleted).toList();
-        if(list.isEmpty()){
+        List<Account> collect = accounts.stream()
+                .filter(Account::getDeleted)
+                .collect(Collectors.toList());
+        if(collect.isEmpty()){
             throw new EmptyAccountException();
         }
-        return list;
+        return collect;
     }
 
     @Override
@@ -64,7 +78,6 @@ public class AccountServiceImpl implements AccountService {
                 .findFirst().orElseThrow(AccountNotFindException::new);
     }
 
-
     @Override
     public void addAccount(Account account) {
         accounts.add(account);
@@ -73,17 +86,16 @@ public class AccountServiceImpl implements AccountService {
     @Override
     public void saveData(String name, FileType type) throws FileException {
         switch (type){
-            case FileType.JSON -> saveJason(name);
+            case FileType.JSON -> saveJson(name);
             case FileType.SERIALIZE -> saveSerialize(name);
         }
-
     }
 
-    private void saveJason(String name) throws FileException {
+    private void saveJson(String name) throws FileException {
         try {
-            File file=new File(name+".jsn");
+            File file = new File(name+".jsn");
             file.createNewFile();
-           objectMapper.writeValue(file,accounts);
+            objectMapper.writeValue(file,accounts);
         } catch (IOException e) {
             throw new FileException();
         }
@@ -91,31 +103,29 @@ public class AccountServiceImpl implements AccountService {
 
     private void saveSerialize(String name) throws FileException {
         try {
-            File file=new File(name+".crm");
+            File file = new File(name+".crm");
             file.createNewFile();
-            try (FileOutputStream fileOutputStream=new FileOutputStream(file);
-                 ObjectOutputStream objectOutputStream=new ObjectOutputStream(fileOutputStream)){
+            try(FileOutputStream fileOutputStream = new FileOutputStream(file);
+                ObjectOutputStream objectOutputStream = new ObjectOutputStream(fileOutputStream)){
                 objectOutputStream.writeObject(accounts);
             }
-
         } catch (IOException e) {
             throw new FileException();
         }
     }
 
     @Override
-    public void loadDate(String name, FileType fileType) throws FileException {
+    public void loadData(String name, FileType fileType) throws FileException {
         switch (fileType){
-            case FileType.JSON -> loadJason(name);
+            case FileType.JSON -> loadJson(name);
             case FileType.SERIALIZE -> loadSerialize(name);
         }
-
     }
 
     @Override
     public void initData() {
         try {
-            loadJason("initAccountData");
+            loadJson("initAccountData");
         } catch (FileException ignored) {
 
         }
@@ -124,50 +134,25 @@ public class AccountServiceImpl implements AccountService {
     @Override
     public void saveOnExit() {
         try {
-            saveJason("initAccountData");
+            saveJson("initAccountData");
         } catch (FileException ignored) {
+
         }
     }
 
     @Override
     public void addData(String name) throws FileException {
         try {
-            ArrayList<Account> newAccounts=objectMapper.readValue(new File(name + ".jsn"),
-                    new TypeReference<ArrayList<Account>>() {
-                    });
+            ArrayList<Account> newAccounts = objectMapper.readValue(new File(name + ".jsn"),
+                    new TypeReference<ArrayList<Account>>() {});
             accounts.addAll(newAccounts);
         } catch (IOException e) {
             throw new FileException();
         }
     }
 
-
-
-    private void loadJason(String name) throws FileException {
-        try {
-            accounts=objectMapper.readValue(new File(name + ".jsn"),
-                    new TypeReference<ArrayList<Account>>() {
-                    });
-        } catch (IOException e) {
-            throw new FileException();
-        }
-    }
-
-    private void loadSerialize(String name) throws FileException {
-        try {
-
-            try (FileInputStream fileInputStream = new FileInputStream(name+".crm");
-                 ObjectInputStream objectInputStream=new ObjectInputStream(fileInputStream)){
-                accounts= (ArrayList<Account>) objectInputStream.readObject();
-
-            }
-        }
-        catch (IOException | ClassNotFoundException e) {
-            throw new FileException();
-        }
-    }
     @Override
-    public List<Account> getAccountByCustomerId(Integer id){
+    public List<Account> getAccountByCustomerId(Integer id) {
         return accounts.stream()
                 .filter(account -> !account.getDeleted())
                 .filter(account -> account.getCustomerId().equals(id))
@@ -175,19 +160,81 @@ public class AccountServiceImpl implements AccountService {
     }
 
     @Override
-    public void deposit(int accountId, Double amount) throws AccountNotFindException {
-        Account accountById = getAccountById(accountId);
-        accountById.setBalance(accountById.getBalance()+amount);
+    public void deposit(int accountId, Amount amount) throws AccountNotFindException {
+        Lock lock=getlock(accountId);
+        lock.lock();
+        try {
+            Account accountById = getAccountById(accountId);
+            accountById.setBalance(amountUtil.add(accountById.getBalance(), amount));
+        }
+       finally {
+            lock.unlock();
+        }
     }
 
     @Override
-    public void withdraw(int accountId, Double amount) throws AccountNotFindException, ValidationException {
-        Account accountById = getAccountById(accountId);
-        if (amount>accountById.getBalance()){
-            throw new ValidationException("The amount is larger than balance!");
+    public void withdraw(int accountId, Amount amount) throws AccountNotFindException, ValidationException {
+        Lock lock=getlock(accountId);
+        lock.lock();
+        try {
+            Account accountById = getAccountById(accountId);
+            if(amountUtil.compareTo(amount,accountById.getBalance()) >0 ){
+                throw new ValidationException("The amount is larger than balance!");
+            }
+            accountById.setBalance(amountUtil.subtract(accountById.getBalance(),amount));
         }
-        accountById.setBalance(accountById.getBalance()-amount);
+        finally {
+            lock.unlock();
+        }
+
     }
 
-}
+    @Override
+    public synchronized void transfer(int fromAccountId, int toAccountId, Amount amount) throws AccountNotFindException, ValidationException {
+        Lock fromLock=getlock(fromAccountId);
+        Lock toLock=getlock(toAccountId);
+
+        Lock firstLock=fromAccountId < toAccountId ? fromLock : toLock;
+        Lock secondLock=fromAccountId<toAccountId?toLock:fromLock;
+
+        firstLock.lock();
+        secondLock.lock();
+        try {
+            Account fromAccount = getAccountById(fromAccountId);
+            Account toAccount = getAccountById(toAccountId);
+            if(amountUtil.compareTo(amount,fromAccount.getBalance()) >0 ){
+                throw new ValidationException("The amount is larger than fromAccount balance!");
+            }
+            fromAccount.setBalance(amountUtil.subtract(fromAccount.getBalance(),amount));
+            toAccount.setBalance(amountUtil.add(toAccount.getBalance(), amount));
+
+        }finally {
+            firstLock.unlock();
+            secondLock.unlock();
+        }
+
+
+
+
+    }
+
+    private void loadJson(String name) throws FileException {
+        try {
+            accounts = objectMapper.readValue(new File(name + ".jsn"),
+                    new TypeReference<ArrayList<Account>>() {});
+        } catch (IOException e) {
+            throw new FileException();
+        }
+    }
+
+    private void loadSerialize(String name) throws FileException {
+        try {
+            try(FileInputStream fileInputStream = new FileInputStream(name+".crm");
+                ObjectInputStream objectInputStream = new ObjectInputStream(fileInputStream)){
+                accounts = (ArrayList<Account>) objectInputStream.readObject();
+            }
+        } catch (IOException | ClassNotFoundException e) {
+            throw new FileException();
+        }
+    }}
 
